--- a/public/spccweb/css/styles.css
+++ b/public/spccweb/css/styles.css
@@ -21,6 +21,7 @@
  * ====================================== */
 
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Roboto+Mono:300,400,700&display=swap');
+@import "../fonts/CormorantInfant-Light.ttf";
 
 * {
     box-sizing: border-box;
@@ -33,12 +34,12 @@ h3,
 }
 
 p {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Cormorant Infant', serif;
 }
 
 a {
     text-decoration: none;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Cormorant Infant', serif;
 }
 
 .btn {
@@ -81,7 +82,7 @@ section.hero a:active {
 }
 
 .section a.link {
-    color: #0f1c70;
+    color: #BDB76B;
     font-weight: 700;
     font-family: 'Roboto Mono', monospace;
 }
@@ -108,7 +109,7 @@ section.hero a:active {
 .site-header {
     width: 100%;
     position: fixed;
-    background: #0f1c70;
+    background: #BDB76B;
     display: grid;
     grid-template-columns: 1fr 2fr;
     grid-template-rows: 1fr auto;
@@ -157,7 +158,7 @@ section.hero a:active {
 .site-header li.cat:hover a,
 .site-header li.cat:active a,
 .site-header li.cat.active a {
-    color: #0f1c70;
+    color: #BDB76B;
 }
 
 .nav-portal li {
@@ -185,18 +186,18 @@ ul.pagination .page-item:hover {
 }
 
 ul.pagination .page-item .page-link {
-    color: #0f1c70;
+    color: #BDB76B;
     margin: -1px;
     padding: 20px 25px;
     font-size: 14px;
     font-weight: 700;
-    border: 2px solid #0f1c70;
-    font-family: 'Open Sans', sans-serif;
+    border: 2px solid #BDB76B;
+    font-family: 'Cormorant Infant', serif;
 }
 
 ul.pagination .page-item.active .page-link {
     color: #fff;
-    background: #0f1c70;
+    background: #BDB76B;
 }
 
 ul.pagination .page-item.disabled {
@@ -266,7 +267,7 @@ ul.pagination .page-item.disabled {
 
 section.hero {
     color: #fff;
-    background: #0f1c70;
+    background: #BDB76B;
     padding: 80px 0 200px 0;
 }
 
@@ -280,7 +281,7 @@ section.hero .headline {
     margin: 0;
     font-size: 90px;
     font-weight: 400;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Cormorant Infant', serif;
 }
 
 section.hero .description {
@@ -298,7 +299,7 @@ section.hero .btn {
 }
 
 section.hero .btn:hover {
-    color: #0f1c70;
+    color: #BDB76B;
     background: #fff;
 }
 
@@ -306,7 +307,7 @@ section.hero .image {
     width: 100%;
     margin-top: 50px;
     text-align: right;
-    background: #0f1c70;
+    background: #BDB76B;
     padding: 15px 0 25px 25px;
 }
 
@@ -454,7 +455,7 @@ section.upcoming-events .card {
     padding: 20px;
     margin: 0 15px;
     border-radius: 10px;
-    color: #0f1c70;
+    color: #BDB76B;
     display: inline-block;
     background: #f9ae17;
 }
@@ -463,7 +464,7 @@ section.upcoming-events .card .date {
     margin: 3px;
     font-size: 26px;
     font-weight: 800;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Cormorant Infant', serif;
 }
 
 section.upcoming-events .card .event {
@@ -518,8 +519,8 @@ section.annoucement .content {
     margin: 0 auto;
     margin-top: 200px;
     padding: 100px;
-    color: #0f1c70;
-    border: 5px solid #0f1c70;
+    color: #BDB76B;
+    border: 5px solid #BDB76B;
     text-align: center;
     grid-column: 1 / -1;
 }
@@ -592,7 +593,7 @@ section.about-brief .content {
 section.about-brief .headline,
 section.about-brief .sub-headline {
     margin-bottom: 0;
-    color: #0f1c70;
+    color: #BDB76B;
     font-size: 40px;
     letter-spacing: 0.1em;
 }
@@ -688,7 +689,7 @@ section.about-brief .bg .circle-pattern-big {
 
 section.programs {
     color: #fff;
-    background: #0f1c70;
+    background: #BDB76B;
     padding: 30px 0;
     justify-items: center;
 }
@@ -823,7 +824,7 @@ section.latest-news {
 }
 
 section.latest-news .headline {
-    color: #0f1c70;
+    color: #BDB76B;
     font-size: 70px;
     letter-spacing: 0.1em;
     padding-left: 50px;
@@ -848,7 +849,7 @@ section.latest-news h3 {
 }
 
 section.latest-news article a.title {
-    color: #0f1c70;
+    color: #BDB76B;
     letter-spacing: 0.1em;
     font-family: 'Roboto Mono', monospace;
 }
@@ -861,7 +862,7 @@ section.latest-news article a.title:active {
 section.latest-news .meta {
     font-size: 16px;
     color: rgb(37, 37, 37, 0.8);
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Cormorant Infant', serif;
 }
 
 section.latest-news .article-content {
@@ -956,7 +957,7 @@ section.latest-news .bg .circle-pattern-small {
 
 .site-footer {
     color: #fff;
-    background: #0f1c70;
+    background: #BDB76B;
     padding-top: 120px;
     display: grid;
     grid-column-gap: 6%;
@@ -992,7 +993,7 @@ section.latest-news .bg .circle-pattern-small {
     line-height: 29px;
     margin: 25px 0;
     font-weight: 100;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Cormorant Infant', serif;
 }
 
 .site-footer .school-info .credited-logo>img {
@@ -1143,7 +1144,7 @@ section.latest-news .bg .circle-pattern-small {
  * ======================================= */
 section.page-cover {
     color: #fff;
-    background: #0f1c70;
+    background: #BDB76B;
     padding: 90px 0 0 0;
     justify-items: center;
 }
@@ -1154,7 +1155,7 @@ section.page-cover::after {
     width: 100%;
     z-index: 2;
     grid-column: 1 / span 2;
-    background: #0f1c70;
+    background: #BDB76B;
 }
 
 section.page-cover .page-title {
@@ -1168,10 +1169,10 @@ section.page-cover h1 {
     padding: 20px 50px;
     font-size: 50px;
     font-weight: 400;
-    background: #0f1c70;
+    background: #BDB76B;
     position: relative;
     text-transform: uppercase;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Cormorant Infant', serif;
     border: 5px solid #f9ae17;
 }
 
@@ -1199,7 +1200,7 @@ section.page-cover .particles-background {
 
 section.about {
     color: #fff;
-    background: #0f1c70;
+    background: #BDB76B;
     padding: 200px 0;
 }
 
@@ -1321,7 +1322,7 @@ section.info-tab .tab-nav a:hover,
 section.info-tab .tab-nav a:active,
 section.info-tab .tab-nav a:focus,
 section.info-tab li.active a {
-    color: #0f1c70;
+    color: #BDB76B;
 }
 
 section.info-tab .tab-content {
@@ -1337,7 +1338,7 @@ section.info-tab .tab-content>div {
 }
 
 section.info-tab .tab-content>div h2 {
-    color: #0f1c70;
+    color: #BDB76B;
     text-align: center;
 }
 
@@ -1472,7 +1473,7 @@ section.info-tab .tab-current {
  * ======================================= */
 section.contact {
     color: #fff;
-    background: #0f1c70;
+    background: #BDB76B;
 }
 
 section.contact .description {
@@ -1513,7 +1514,7 @@ section.contact textarea {
     background: none;
     border-radius: 10px;
     border: 2px solid #fff;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Cormorant Infant', serif;
 }
 
 section.contact .form-group:hover,
@@ -1569,7 +1570,7 @@ section.contact .btn-submit {
 }
 
 section.contact .btn-submit:hover {
-    color: #0f1c70;
+    color: #BDB76B;
     background: #fff;
 }
 
@@ -1694,7 +1695,7 @@ section.contact .bg .circle-pattern-small {
 
 section.enroll {
     color: #fff;
-    background: #0f1c70;
+    background: #BDB76B;
     padding: 20px 0 80px 0;
     justify-items: center;
 }
@@ -1816,7 +1817,7 @@ section.policies div {
 }
 
 section.policies .headline {
-    color: #0f1c70;
+    color: #BDB76B;
     font-size: 40px;
     letter-spacing: 0.1em;
     text-align: center;
@@ -1907,7 +1908,7 @@ section.team .title {
 
 section.team .card h1,
 section.team .card h2 {
-    color: #0f1c70;
+    color: #BDB76B;
     text-transform: uppercase;
     font-family: 'Roboto Mono', monospace;
 }
@@ -1932,7 +1933,7 @@ section.team img.avatar {
 }
 
 section.team .name {
-    color: #0f1c70;
+    color: #BDB76B;
     font-size: 16px;
 }
 
@@ -1979,7 +1980,7 @@ section.team .team-member p {
 
 section.featured-news {
     color: #fff;
-    background: #0f1c70;
+    background: #BDB76B;
     padding: 80px 0;
     justify-items: center;
 }
@@ -2030,7 +2031,7 @@ section.featured-news a.link {
 section.featured-news .meta {
     font-size: 16px;
     color: #ffffffcc;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Cormorant Infant', serif;
 }
 
 section.featured-news .news-meta {
@@ -2141,7 +2142,7 @@ section.news h2 {
 }
 
 section.news a.title {
-    color: #0f1c70;
+    color: #BDB76B;
     letter-spacing: 0.1em;
     font-family: 'Roboto Mono', monospace;
 }
@@ -2154,7 +2155,7 @@ section.news a.title:active {
 section.news .meta {
     font-size: 16px;
     color: #252525b0;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Cormorant Infant', serif;
 }
 
 section.news .news-meta {
@@ -2216,7 +2217,7 @@ section.article .news-meta {
 }
 
 section.article h1.title {
-    color: #0f1c70;
+    color: #BDB76B;
     font-size: 45px;
     letter-spacing: 0.1em;
     font-family: 'Roboto Mono', monospace;
@@ -2225,7 +2226,7 @@ section.article h1.title {
 section.article .meta {
     font-size: 16px;
     color: #252525;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Cormorant Infant', serif;
 }
 
 section.article img {
@@ -2243,7 +2244,7 @@ section.article .article-content {
 
 section.article .article-content * {
     line-height: 26px;
-    font-family: 'Open Sans', sans-serif !important;
+    font-family: 'Cormorant Infant', serif !important;
 }
 
 section.article .button {
