--- a/public/argon/css/argon.css
+++ b/public/argon/css/argon.css
@@ -17589,6 +17589,7 @@ a.btn-icon-only
 {
     .main-content .container-fluid
     {
+        padding-top: 100px;
         padding-right: 39px !important;
         padding-left: 39px !important;
     }
