--- a/public/spccweb/css/styles.css
+++ b/public/spccweb/css/styles.css
@@ -2319,20 +2319,32 @@ li.cat.dropdown-item{
     position: relative;
     display: inline-block;
 }
+li.hover > ul li{
+    border-bottom:1px solid #394522 ;
+}
 li.hover > ul{
+    font-size: 12px;
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
+    background-color: #ffffff;
     min-width: 160px;
     /* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); */
-    padding: 12px 16px;
+    padding: 12px 0px;
+    text-wrap: avoid;
     z-index: 1;
-    left: 0;
+    left: -60px;
     top:40px;
+    border-bottom-left-radius:5px ;
+    border-top-left-radius:5px ;
+    border-bottom-right-radius:5px ;
+
 }
 
-li.hover > ul :hover li.hover > ul{
+li.hover:hover ul{
     display: block;
+}
+li.hover .hover-dropdown-item:hover a{
+    color: #394522;
 }
 
 
@@ -2381,7 +2393,7 @@ li.hover > ul :hover li.hover > ul{
     position: relative;
     top: -110px;
     left: 1130px;
-    
+
 } */
 
 
