--- a/public/spccweb/css/styles.css
+++ b/public/spccweb/css/styles.css
@@ -2326,18 +2326,21 @@ li.hover > ul{
     display: none;
     position: absolute;
     background-color: #ffffff;
-    width: 160px;
+    width: 200px;
     /* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); */
     padding: 12px 0px;
     z-index: 1;
-    left: -67px;
+    left: -100px;
     top:40px;
-    border-bottom-left-radius:5px ;
-    border-top-left-radius:5px ;
+    border-radius:5px ;
 }
 
 li.hover:hover ul,li.hover:active ul{
     display: block;
+}
+li.hover li{
+    padding: 10px 15px;
+
 }
 li.hover .hover-dropdown-item:hover a,li.hover .hover-dropdown-item:active a{
     padding: 10px 20px;
