--- a/public/spccweb/css/styles.css
+++ b/public/spccweb/css/styles.css
@@ -22,7 +22,12 @@
 
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Roboto+Mono:300,400,700&display=swap');
 @import "../fonts/CormorantInfant-Light.ttf";
-
+@media (min-width: 992px) {
+    .col-md-6 {
+        width: 50%;
+        float: left;
+    }
+}
 * {
     box-sizing: border-box;
 }
@@ -453,7 +458,7 @@ section.upcoming-events .btn:active {
 
 section.upcoming-events .card {
     width: 180px;
-    height: 170px;
+    height: auto;
     padding: 20px;
     margin: 0 15px;
     border-radius: 10px;
@@ -486,7 +491,7 @@ section.upcoming-events .card .event {
 
     section.upcoming-events .card {
         width: 130px;
-        height: 130px;
+        height: auto;
         padding: 15px;
         margin: 0 10px;
     }
@@ -1120,6 +1125,7 @@ section.latest-news .bg .circle-pattern-small {
     }
 
     .site-footer .school-info .content {
+
         padding-left: 0;
         padding-right: 10px;
     }
@@ -1367,7 +1373,7 @@ section.info-tab #tab-president {
 }
 
 section.info-tab #tab-president img {
-    width: 300px;
+    width: 220px;
     height: auto;
     border-radius: 50%;
 }
@@ -1473,7 +1479,8 @@ section.info-tab .tab-current {
     }
 
     section.info-tab .tab-content>div {
-        padding: 60px 10px;
+        /*padding: 60px 10px;*/
+
     }
 }
 
@@ -2307,6 +2314,10 @@ section.programs .items .half {
     padding: 10px;
     justify-self: center;
 }
+section.programs .course a {
+    text-decoration: none;
+    color: #FFFFFF;
+}
 section.usefull-links .items .half img{
     height: auto;
 }
@@ -2391,3 +2402,23 @@ li.hover .hover-dropdown-item:hover a,li.hover .hover-dropdown-item:active a{
  }
 
 
+.course {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    flex-wrap: wrap;
+    -webkit-flex-wrap: wrap;
+    -moz-flex-wrap: wrap;
+    margin-bottom: 30px;
+}
+.course .course-img {
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    position: relative;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
+}
