--- a/public/spccweb/css/styles.css
+++ b/public/spccweb/css/styles.css
@@ -2183,6 +2183,15 @@ section.news .article-content {
     -ms-word-wrap: break-word;
 }
 
+section.news .article-content.posts {
+    color: #252525;
+    line-height: 26px;
+    height: auto;
+    overflow: hidden;
+    word-wrap: break-word;
+    -ms-word-wrap: break-word;
+}
+
 /* Responsiveness */
 
 @media only screen and (max-width: 768px) {
