--- a/public/spccweb/css/styles.css
+++ b/public/spccweb/css/styles.css
@@ -2137,9 +2137,12 @@ section.news {
 }
 
 section.news article {
+    border-radius: 10px;
     grid-column: 1 / -1;
     width: 700px;
-    margin: 50px 0;
+    border: 1px solid #BDB76B;
+    margin: 20px 0;
+    padding: 10px;
     justify-self: center;
 }
 
