--- a/public/spccweb/css/styles.css
+++ b/public/spccweb/css/styles.css
@@ -84,11 +84,11 @@ section.hero a {
 .site-header li.active a,
 section.hero a:hover,
 section.hero a:active {
-    color: #394522;
+    color: #daddd5;
 }
 
 .section a.link {
-    color: #BDB76B;
+    color: #4d4b09;
     font-weight: 700;
     font-family: 'Roboto Mono', monospace;
 }
@@ -99,7 +99,7 @@ section.hero a:active {
 
 .section a.link:hover,
 .section a.link:active {
-    color: #394522;
+    color: #daddd5;
 }
 
 @media only screen and (max-width: 768px) {
@@ -115,7 +115,7 @@ section.hero a:active {
 .site-header {
     width: 100%;
     position: fixed;
-    background: #BDB76B;
+    background: #4d4b09;
     display: grid;
     grid-template-columns: 1fr 2fr;
     grid-template-rows: 1fr auto;
@@ -164,7 +164,7 @@ section.hero a:active {
 .site-header li.cat:hover a,
 .site-header li.cat:active a,
 .site-header li.cat.active a {
-    color: #BDB76B;
+    color: #4d4b09;
 }
 
 .nav-portal li {
@@ -192,18 +192,18 @@ ul.pagination .page-item:hover {
 }
 
 ul.pagination .page-item .page-link {
-    color: #BDB76B;
+    color: #4d4b09;
     margin: -1px;
     padding: 20px 25px;
     font-size: 14px;
     font-weight: 700;
-    border: 2px solid #BDB76B;
+    border: 2px solid #4d4b09;
     font-family: 'Cormorant Infant', serif;
 }
 
 ul.pagination .page-item.active .page-link {
     color: #fff;
-    background: #BDB76B;
+    background: #4d4b09;
 }
 
 ul.pagination .page-item.disabled {
@@ -260,7 +260,7 @@ ul.pagination .page-item.disabled {
     }
 
     .site-nav.responsive li:hover {
-        background: #394522;
+        background: #daddd5;
     }
 
     .site-nav.responsive a:hover {
@@ -274,7 +274,7 @@ ul.pagination .page-item.disabled {
 
 section.hero {
     color: #fff;
-    background: #BDB76B;
+    background: #4d4b09;
     padding: 80px 0 200px 0;
 }
 
@@ -306,7 +306,7 @@ section.hero .btn {
 }
 
 section.hero .btn:hover {
-    color: #BDB76B;
+    color: #4d4b09;
     background: #fff;
 }
 
@@ -314,7 +314,7 @@ section.hero .image {
     width: 100%;
     margin-top: 50px;
     text-align: right;
-    background: #BDB76B;
+    background: #4d4b09;
     padding: 15px 0 25px 25px;
 }
 
@@ -453,7 +453,7 @@ section.upcoming-events .btn {
 
 section.upcoming-events .btn:hover,
 section.upcoming-events .btn:active {
-    color: #394522;
+    color: #daddd5;
 }
 
 section.upcoming-events .card {
@@ -462,9 +462,9 @@ section.upcoming-events .card {
     padding: 20px;
     margin: 0 15px;
     border-radius: 10px;
-    color: #BDB76B;
+    color: #4d4b09;
     display: inline-block;
-    background: #394522;
+    background: #daddd5;
 }
 
 section.upcoming-events .card .date {
@@ -527,8 +527,8 @@ section.annoucement .content {
     margin-top: 100px;
     margin-bottom: 50px;
     padding: 100px;
-    color: #BDB76B;
-    border: 5px solid #BDB76B;
+    color: #4d4b09;
+    border: 5px solid #4d4b09;
     text-align: center;
     grid-column: 1 / -1;
 }
@@ -601,7 +601,7 @@ section.about-brief .content {
 section.about-brief .headline,
 section.about-brief .sub-headline {
     margin-bottom: 0;
-    color: #BDB76B;
+    color: #4d4b09;
     font-size: 40px;
     letter-spacing: 0.1em;
 }
@@ -700,7 +700,7 @@ section.about-brief .bg .circle-pattern-big {
 
 section.programs {
     color: #fff;
-    background: #BDB76B;
+    background: #4d4b09;
     padding: 30px 0;
     justify-items: center;
 }
@@ -838,7 +838,7 @@ section.latest-news {
 }
 
 section.latest-news .headline {
-    color: #BDB76B;
+    color: #4d4b09;
     font-size: 70px;
     letter-spacing: 0.1em;
     padding-left: 50px;
@@ -863,14 +863,14 @@ section.latest-news h3 {
 }
 
 section.latest-news article a.title {
-    color: #BDB76B;
+    color: #4d4b09;
     letter-spacing: 0.1em;
     font-family: 'Roboto Mono', monospace;
 }
 
 section.latest-news article a.title:hover,
 section.latest-news article a.title:active {
-    color: #394522;
+    color: #daddd5;
 }
 
 section.latest-news .meta {
@@ -971,7 +971,7 @@ section.latest-news .bg .circle-pattern-small {
 
 .site-footer {
     color: #fff;
-    background: #BDB76B;
+    background: #4d4b09;
     padding-top: 120px;
     display: grid;
     grid-column-gap: 6%;
@@ -1049,7 +1049,7 @@ section.latest-news .bg .circle-pattern-small {
 
 .site-footer .contact-info a:hover,
 .site-footer .contact-info a:active {
-    color: #394522;
+    color: #daddd5;
 }
 
 .site-footer .content i {
@@ -1069,7 +1069,7 @@ section.latest-news .bg .circle-pattern-small {
 }
 
 .site-footer .credits a {
-    color: #394522;
+    color: #daddd5;
 }
 
 .site-footer .copyright::before {
@@ -1159,7 +1159,7 @@ section.latest-news .bg .circle-pattern-small {
  * ======================================= */
 section.page-cover {
     color: #fff;
-    background: #BDB76B;
+    background: #4d4b09;
     padding: 90px 0 0 0;
     justify-items: center;
 }
@@ -1170,7 +1170,7 @@ section.page-cover::after {
     width: 100%;
     z-index: 2;
     grid-column: 1 / span 2;
-    background: #BDB76B;
+    background: #4d4b09;
 }
 
 section.page-cover .page-title {
@@ -1180,15 +1180,15 @@ section.page-cover .page-title {
 section.page-cover h1 {
     margin-top: 80px;
     margin-bottom: -50px;
-    color: #394522;
+    color: #daddd5;
     padding: 20px 50px;
     font-size: 50px;
     font-weight: 400;
-    background: #BDB76B;
+    background: #4d4b09;
     position: relative;
     text-transform: uppercase;
     font-family: 'Cormorant Infant', serif;
-    border: 5px solid #394522;
+    border: 5px solid #daddd5;
 }
 
 section.page-cover .particles-background {
@@ -1215,7 +1215,7 @@ section.page-cover .particles-background {
 
 section.about {
     color: #fff;
-    background: #BDB76B;
+    background: #4d4b09;
     padding: 200px 0;
 }
 
@@ -1312,7 +1312,7 @@ section.info-tab {
 
 section.info-tab .tab-menu {
     padding: 50px 25px;
-    background: #394522;
+    background: #daddd5;
 }
 
 section.info-tab .tab-nav {
@@ -1337,7 +1337,7 @@ section.info-tab .tab-nav a:hover,
 section.info-tab .tab-nav a:active,
 section.info-tab .tab-nav a:focus,
 section.info-tab li.active a {
-    color: #BDB76B;
+    color: #4d4b09;
 }
 
 section.info-tab .tab-content {
@@ -1353,7 +1353,7 @@ section.info-tab .tab-content>div {
 }
 
 section.info-tab .tab-content>div h2 {
-    color: #BDB76B;
+    color: #4d4b09;
     text-align: center;
 }
 
@@ -1489,7 +1489,7 @@ section.info-tab .tab-current {
  * ======================================= */
 section.contact {
     color: #fff;
-    background: #BDB76B;
+    background: #4d4b09;
 }
 
 section.contact .description {
@@ -1503,7 +1503,7 @@ section.contact .description {
 }
 
 section.contact .description b {
-    color: #394522;
+    color: #daddd5;
 }
 
 section.contact form {
@@ -1536,13 +1536,13 @@ section.contact textarea {
 section.contact .form-group:hover,
 section.contact input:focus,
 section.contact textarea:focus {
-    color: #394522;
+    color: #daddd5;
 }
 
 section.contact input:focus,
 section.contact input:hover,
 section.contact textarea:focus section.contact textarea:hover {
-    border: 2px solid #394522;
+    border: 2px solid #daddd5;
 }
 
 section.contact textarea {
@@ -1586,7 +1586,7 @@ section.contact .btn-submit {
 }
 
 section.contact .btn-submit:hover {
-    color: #BDB76B;
+    color: #4d4b09;
     background: #fff;
 }
 
@@ -1707,7 +1707,7 @@ section.contact .bg .circle-pattern-small {
 
 section.enroll {
     color: #fff;
-    background: #BDB76B;
+    background: #4d4b09;
     padding: 20px 0 80px 0;
     justify-items: center;
 }
@@ -1829,7 +1829,7 @@ section.policies div {
 }
 
 section.policies .headline {
-    color: #BDB76B;
+    color: #4d4b09;
     font-size: 40px;
     letter-spacing: 0.1em;
     text-align: center;
@@ -1920,7 +1920,7 @@ section.team .title {
 
 section.team .card h1,
 section.team .card h2 {
-    color: #BDB76B;
+    color: #4d4b09;
     text-transform: uppercase;
     font-family: 'Roboto Mono', monospace;
 }
@@ -1945,7 +1945,7 @@ section.team img.avatar {
 }
 
 section.team .name {
-    color: #BDB76B;
+    color: #4d4b09;
     font-size: 16px;
 }
 
@@ -1992,7 +1992,7 @@ section.team .team-member p {
 
 section.featured-news {
     color: #fff;
-    background: #BDB76B;
+    background: #4d4b09;
     padding: 80px 0;
     justify-items: center;
 }
@@ -2033,7 +2033,7 @@ section.featured-news a.title {
 
 section.featured-news a.title:hover,
 section.featured-news a.title:active {
-    color: #394522;
+    color: #daddd5;
 }
 
 section.featured-news a.link {
@@ -2140,7 +2140,7 @@ section.news article {
     border-radius: 10px;
     grid-column: 1 / -1;
     width: 700px;
-    border: 1px solid #BDB76B;
+    border: 1px solid #4d4b09;
     margin: 20px 0;
     padding: 10px;
     justify-self: center;
@@ -2157,14 +2157,14 @@ section.news h2 {
 }
 
 section.news a.title {
-    color: #BDB76B;
+    color: #4d4b09;
     letter-spacing: 0.1em;
     font-family: 'Roboto Mono', monospace;
 }
 
 section.news a.title:hover,
 section.news a.title:active {
-    color: #394522;
+    color: #daddd5;
 }
 
 section.news .meta {
@@ -2241,7 +2241,7 @@ section.article .news-meta {
 }
 
 section.article h1.title {
-    color: #BDB76B;
+    color: #4d4b09;
     font-size: 45px;
     letter-spacing: 0.1em;
     font-family: 'Roboto Mono', monospace;
@@ -2334,7 +2334,7 @@ section.usefull-links .items .half img{
     height: auto;
 }
 #siteNav .cat.nav-item a.dropdown-item:hover {
-    color: #394522;
+    color: #daddd5;
 }
 
 #siteNav .cat.dropdown-item {
@@ -2370,20 +2370,20 @@ section.usefull-links .items .half img{
 #siteNav li.hover .hover-dropdown-item:hover a, li.hover .hover-dropdown-item:active a {
     padding: 10px 20px;
     display: block;
-    color: #394522;
-    background-color: #BDB76B;
+    color: #daddd5;
+    background-color: #4d4b09;
     border-radius: 0.125rem;
-    box-shadow: 0 5px 11px 0 #394522, 0 4px 15px 0 #394522;
+    box-shadow: 0 5px 11px 0 #daddd5, 0 4px 15px 0 #daddd5;
     transition: all .1s linear;
 }
 
 #siteNav li.hover .hover-dropdown-item .hover-subitem:hover a, li.hover .hover-dropdown-item .hover-subitem:active a {
     padding: 10px 20px;
     display: block;
-    color: #394522;
-    background-color: #BDB76B;
+    color: #daddd5;
+    background-color: #4d4b09;
     border-radius: 0.125rem;
-    box-shadow: 0 5px 11px 0 #394522, 0 4px 15px 0 #394522;
+    box-shadow: 0 5px 11px 0 #daddd5, 0 4px 15px 0 #daddd5;
     transition: all .1s linear;
 }
 
@@ -2391,33 +2391,33 @@ section.usefull-links .items .half img{
     #siteNav li.hover .hover-dropdown-item a, li.hover .hover-dropdown-item a {
         padding: 10px 20px;
         display: block;
-        color: #394522;
-        background-color: #BDB76B;
+        color: #daddd5;
+        background-color: #4d4b09;
         border-radius: 0.125rem;
-        box-shadow: 0 5px 11px 0 #394522, 0 4px 15px 0 #394522;
+        box-shadow: 0 5px 11px 0 #daddd5, 0 4px 15px 0 #daddd5;
         transition: all .1s linear;
     }
 
     .site-header li.cat:hover a, .site-header li.cat:active a, .site-header li.cat.active a {
-        color: #394522;
+        color: #daddd5;
     }
 
     .site-header li.cat:hover > a, .site-header li.cat:active > a, .site-header li.cat.active > a {
-        color: #BDB76B;
+        color: #4d4b09;
     }
 
     .site-nav li.cat:hover, .site-nav li.cat:active, .site-nav li.cat.active {
-        background: #394522;
+        background: #daddd5;
         color: #ffffff;
     }
 
     #siteNav li.hover.active li {
-        color: #394522;
+        color: #daddd5;
     }
 
     #siteNav .site-nav.responsive .hover li, .hover.cat {
-        background: #394522;
-        color: #BDB76B;
+        background: #daddd5;
+        color: #4d4b09;
     }
 
     .site-header nav li {
@@ -2427,7 +2427,7 @@ section.usefull-links .items .half img{
     #siteNav li.hover > ul {
         font-size: 8px;
         position: relative;
-        background-color: #BDB76B;
+        background-color: #4d4b09;
         left: 50px;
         top: 0px;
     }
@@ -2460,8 +2460,8 @@ section.usefull-links .items .half img{
     right: 20px;
 }
 .language-switcher select {
-    background: #BDB76B;
-    color: #394522;
+    background: #4d4b09;
+    color: #daddd5;
     border: 1px solid #ffffff;
     padding: 5px 5px;
     border-radius: 5px;
